--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>Laura</title>
 </head>
 
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <script src="js/app.js"></script>
+    <script src="/dist/js/app.js"></script>
 </body>
 
 </html>
