--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
     </main>
 
-    <script src="/dist/js/app.js"></script>
+    <script src="dist/js/app.js"></script>
 </body>
 
 </html>
